--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1376,7 +1376,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 	top: 0px;
 	z-index: -1;
 	background-attachment: fixed;
-	background-image: url(../demo_img/log-in-ba.jpg);
+	background-image: url(../img/log-in-ba.jpg);
     opacity: 0.2;
 	}	
 .log-in-form{
